# edge-ai-suites

.github/workflows/: education-suite-scan.yaml  industrial-edge-insights-time-series-tests.yml
education-ai-suite/smart-classroom/: config.yaml
education-ai-suite/smart-classroom/content_search/: start_services.py
education-ai-suite/smart-classroom/content_search/docs/dev_guide/: API_GUIDE.md
education-ai-suite/smart-classroom/content_search/providers/file_ingest_and_retrieve/: document_parser.py  indexer.py  retriever.py  server.py  utils.py
education-ai-suite/smart-classroom/docs/user-guide/: get-started.md  release-notes.md
education-ai-suite/smart-classroom/ui/: package-lock.json
education-ai-suite/smart-classroom/ui/src/i18n/: en.json  zh.json
education-ai-suite/smart-classroom/ui/src/redux/: useContentSegmentation.ts
education-ai-suite/smart-classroom/ui/src/services/: api.ts
manufacturing-ai-suite/industrial-edge-insights-multimodal/: .gitignore  docker-compose.yml
manufacturing-ai-suite/industrial-edge-insights-multimodal/docs/user-guide/get-started/: deploy-with-helm.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/tests/: README.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/tests/functional/: pytest.ini  test_docker_deployment_multimodal.py  test_helm_deployment_multimodal.py
manufacturing-ai-suite/industrial-edge-insights-multimodal/weld-data-simulator/: publisher.py
manufacturing-ai-suite/industrial-edge-insights-time-series/: .gitignore
manufacturing-ai-suite/industrial-edge-insights-time-series/apps/wind-turbine-anomaly-detection/training/: requirements.txt
manufacturing-ai-suite/industrial-edge-insights-time-series/tests/: README.md  requirements.txt
manufacturing-ai-suite/industrial-edge-insights-time-series/tests/functional/: conftest_docker.py  conftest_helm.py  pytest.ini  test_docker_deployment_stability.py  test_docker_deployment_weld_anomaly.py  test_docker_deployment_wind_turbine.py  test_docker_helm_deployment_security.py  test_docker_influxdb_retention.py  test_helm_deployment_weld_anomaly.py  test_helm_deployment_wind_turbine.py  test_helm_influxdb_retention.py
manufacturing-ai-suite/industrial-edge-insights-time-series/tests/utils/: common_utils.py  constants.py  docker_utils.py  helm_utils.py  security_utils.py
manufacturing-ai-suite/industrial-edge-insights-vision/docs/user-guide/pallet-defect-detection/: how-to-guides.md
manufacturing-ai-suite/industrial-edge-insights-vision/win-vision-ai/docs/: get-started.md
metro-ai-suite/image-based-video-search/: compose.yml
metro-ai-suite/image-based-video-search/docs/user-guide/get-started/: deploy-with-helm.md
metro-ai-suite/image-based-video-search/src/streaming-pipeline/: Dockerfile
metro-ai-suite/live-video-analysis/live-video-alert-agent/docs/user-guide/: deploy-with-helm.md  get-started.md
metro-ai-suite/live-video-analysis/live-video-captioning/charts/: Chart.yaml
metro-ai-suite/metro-sdk-manager/docs/user-guide/: index.md
metro-ai-suite/metro-vision-ai-app-recipe/smart-intersection/chart/: values.yaml
metro-ai-suite/metro-vision-ai-app-recipe/smart-parking/helm-chart/: values.yaml
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/deploy/: README.md
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/deploy/docker/: README_Docker.md
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/deploy/docs/: GSG.md  (+2 more)
metro-ai-suite/smart-nvr/docs/user-guide/: scenescape-integration.md
metro-ai-suite/smart-traffic-intersection-agent/: setup.sh
metro-ai-suite/smart-traffic-intersection-agent/docs/user-guide/: get-started.md
metro-ai-suite/video-processing-for-nvr/example/VA_example/decode_detection/resize_sharing/: CMakeLists.txt  dec_det_sharing.cpp  run.sh
metro-ai-suite/video-processing-for-nvr/example/VA_example/decode_detection_classification/dec_resize_det_cls_sharing/: CMakeLists.txt  build.sh  dec_resize_det_cls_sharing.cpp  run.sh
metro-ai-suite/video-processing-for-nvr/example/decode_encode/: CMakeLists.txt  build.sh  config.txt  config_rtsp1.txt  decode_encode.cpp  env.sh  rtsp.patch  run_test.sh  yu12test.sh
metro-ai-suite/video-processing-for-nvr/example/decode_encode/rtsp/: CMakeLists.txt
metro-ai-suite/video-processing-for-nvr/example/decode_encode/rtsp/include/: bitstream_rtsp_reader.h
metro-ai-suite/video-processing-for-nvr/example/decode_encode/rtsp/src/: bitstream_file_reader.cpp  bitstream_rtsp_reader.cpp  rtsp_client_deamon.cpp
robotics-ai-suite/components/adbscan/Follow_me_RS_2D/: Requirements.md
robotics-ai-suite/components/ros-kpi/: pyproject.toml
robotics-ai-suite/components/simulations/PicknPlace/: README.md
robotics-ai-suite/docs/: requirements.txt
robotics-ai-suite/docs/robotics/gsg_robot/: index.md
(+23 files in other folders)
